fix broken layout when hard-loading pages

--- a/docs/.vuepress/theme/styles/index.styl
+++ b/docs/.vuepress/theme/styles/index.styl
@@ -20,6 +20,7 @@
 
 .content__default
   max-width 800px!important
+  margin 0 auto
 
 .navbar
   position: relative
